# itrack

./: .gitignore  CMakeLists.txt  README.md  main.cu
python/: playground.py  tracker_model.py
src/: LayerKernels.cu  LayerKernels.cuh  Utils.h  main.cu  pch.cuh  test.cu
weights/: .gitignore
